fixing pdf stretch 2

--- a/src/style.css
+++ b/src/style.css
@@ -370,8 +370,6 @@ form input[type="submit"]:hover {
 
 .resume {
   width: 100%;
-  height: auto;
-  min-height: 100vh;
   margin-bottom: 10px;
   margin-top: 20px;
   border: 2px solid var(--main-color);
